--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My express</title>
+  <link rel="stylesheet" href="/public/css/style.css">
 </head>
 <body>
   <h1>Home</h1>
